# lms

./: .gitignore  README.MD  docker-compose.yml  pyproject.toml
app/: app.dockerfile  requirements.txt
app/chapter/: admin.py  models.py  views.py
app/chapter/migrations/: 0001_initial.py
app/core/: permissions.py  views.py
app/coupon/: views.py
app/course/: admin.py  models.py  serializers.py  urls.py  views.py
app/course/migrations/: 0001_initial.py  0002_tag.py  0003_auto_20210912_0354.py
app/doubt/: views.py
app/order/: views.py
app/proj/: settings.py  urls.py
app/review/: urls.py  views.py
